--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mlx-geoprompt"
+name = "landline"
 version = "0.1.0"
 description = "Natural language interface for geospatial databases. Capstone project, MLX5 (2024)"
 authors = ["John X <john.iv@x25bd.com>"]
