--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,9 @@ services:
     image: nginx:latest
     ports:
       - 80:80
+      - 443:443
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - api
       - front
