fix: improve map stability and feature display
- Use feature groups for coverage area and query results\n- Add layer controls for toggling features\n- Ensure proper map bounds and zoom levels

--- a/compose.yaml
+++ b/compose.yaml
@@ -34,6 +34,8 @@ services:
       - API_PORT=8000
     ports:
       - "8501:8501"
+    volumes:
+      - ./front:/app
     depends_on:
       - api
     security_opt:
